# porfolio-deeplearning

./: .buildinfo  ACT_0.html  ACT_1.html  ACT_2.html  ACT_3.html  ACT_4.html  ACT_5.html  ACT_6.html  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: ACT_0.ipynb  ACT_1.ipynb  ACT_3.ipynb  ACT_4.ipynb  ACT_6.md  intro.md
_static/: custom.css
newbook/: ACT_0.ipynb  ACT_1.ipynb  ACT_2.ipynb  ACT_5.ipynb  ACT_6.md  _config.yml  _toc.yml  intro.md  requirements.txt
newbook/_build/.doctrees/: ACT_0.doctree  ACT_1.doctree  ACT_2.doctree  ACT_3.doctree  ACT_4.doctree  ACT_5.doctree  ACT_6.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
newbook/_build/html/: .buildinfo  ACT_0.html  ACT_1.html  ACT_2.html  ACT_3.html  ACT_4.html  ACT_5.html  ACT_6.html  genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
newbook/_build/html/_sources/: ACT_0.ipynb  ACT_1.ipynb  ACT_2.ipynb  ACT_4.ipynb  ACT_5.ipynb  ACT_6.md  intro.md
newbook/_build/html/_static/: custom.css
newbook/_build/jupyter_execute/: ACT_0.ipynb  ACT_1.ipynb  ACT_2.ipynb  ACT_3.ipynb  ACT_4.ipynb  ACT_5.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
newbook/_static/: custom.css
