[project]
name = "porfolio-deeplearning"
version = "0.1.0"
description = ""
authors = [
    {name = "rocketwolf98",email = "117415481+rocketwolf98@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
